; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ext3/extr_balloc.c_ext3_test_allocatable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ext3/extr_balloc.c_ext3_test_allocatable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer_head = type { i32 }
%struct.journal_head = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.buffer_head*)* @ext3_test_allocatable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ext3_test_allocatable(i32 %0, %struct.buffer_head* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.buffer_head*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.journal_head*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.buffer_head* %1, %struct.buffer_head** %5, align 8
  %8 = load %struct.buffer_head*, %struct.buffer_head** %5, align 8
  %9 = call %struct.journal_head* @bh2jh(%struct.buffer_head* %8)
  store %struct.journal_head* %9, %struct.journal_head** %7, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.buffer_head*, %struct.buffer_head** %5, align 8
  %12 = getelementptr inbounds %struct.buffer_head, %struct.buffer_head* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @ext3_test_bit(i32 %10, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %38

17:                                               ; preds = %2
  %18 = load %struct.buffer_head*, %struct.buffer_head** %5, align 8
  %19 = call i32 @jbd_lock_bh_state(%struct.buffer_head* %18)
  %20 = load %struct.journal_head*, %struct.journal_head** %7, align 8
  %21 = getelementptr inbounds %struct.journal_head, %struct.journal_head* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %17
  store i32 1, i32* %6, align 4
  br label %34

25:                                               ; preds = %17
  %26 = load i32, i32* %4, align 4
  %27 = load %struct.journal_head*, %struct.journal_head** %7, align 8
  %28 = getelementptr inbounds %struct.journal_head, %struct.journal_head* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i64 @ext3_test_bit(i32 %26, i32 %29)
  %31 = icmp ne i64 %30, 0
  %32 = xor i1 %31, true
  %33 = zext i1 %32 to i32
  store i32 %33, i32* %6, align 4
  br label %34

34:                                               ; preds = %25, %24
  %35 = load %struct.buffer_head*, %struct.buffer_head** %5, align 8
  %36 = call i32 @jbd_unlock_bh_state(%struct.buffer_head* %35)
  %37 = load i32, i32* %6, align 4
  store i32 %37, i32* %3, align 4
  br label %38

38:                                               ; preds = %34, %16
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local %struct.journal_head* @bh2jh(%struct.buffer_head*) #1

declare dso_local i64 @ext3_test_bit(i32, i32) #1

declare dso_local i32 @jbd_lock_bh_state(%struct.buffer_head*) #1

declare dso_local i32 @jbd_unlock_bh_state(%struct.buffer_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
